added reset password feature and make some change in ui/ui for small screen

--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "@auth/mongodb-adapter": "^2.0.7",
     "@aws-sdk/client-s3": "^3.474.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@sendgrid/mail": "^8.1.0",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^10.18.0",
+    "http-auth-utils": "^6.0.0",
     "lucide-react": "^0.294.0",
     "micro": "^10.0.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "nodemailer": "^6.9.8",
+    "parse": "^4.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.21.3",
     "stripe": "^14.10.0",
     "uniqid": "^5.4.0"
   },
