add repeat password input to register page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@auth/mongodb-adapter": "^2.0.7",
     "@aws-sdk/client-s3": "^3.474.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@googlemaps/google-maps-services-js": "^3.3.42",
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "@react-google-maps/api": "^2.19.2",
     "@sendgrid/mail": "^8.1.0",
     "bcrypt": "^5.1.1",
     "framer-motion": "^10.18.0",
